<resources>
    <string name="app_name">SOBR</string>
    <string name="sobr_assist_title">Internet-location SOBR-Assist</string>
    <string name="sobr_assist_small">Service is availabce for registered users only.</string>
    <string name="sobr_assist_registration_link"><a href="http://location.sobr-a.ru/client-portal/?action=register">Registration</a></string>
    <string name="sobr_assist_registration">Registration</string>
    <string name="sobr_assist_login_hint">Login</string>
    <string name="sobr_assist_password_hint">Password</string>
    <string name="state_sobr_assist">SOBR-Assist</string>
    <string name="sobr_assist_description">SOBR-Assistance service\r\nFull range functionality "satellite" systems.\r\nCall Emergency Centre Responce.\r\nProffesional Anti-Theft Systems.\r\nProffesional anti-hi-jack.\r\nSearch of the vehicle in case of theft.\r\nTechnical assistance on the road.\r\nEvacuation vehicle.\r\nEmergency help.\r\nCar online location.</string>
    <string name="sobr_assist_connect">Connection to SOBR-Assistance</string>
	<string name="tab_name_engine">Engine</string>
    <string name="tab_name_device">Device</string>
    <string name="tab_name_state">State</string>
    <string name="tab_name_security">Security</string>
    <string name="tab_name_settings">Settings</string>
    <string name="device_engine_title">Start</string>
    <string name="device_engine_start_btn">Engine start</string>
    <string name="device_preheater_title">Preheater</string>
    <string name="device_preheater_on">Preheater_on</string>
    <string name="device_preheater_off">Preheater_off</string>
    <string name="device_heater_title">Heater</string>
    <string name="device_heater_on_btn">On</string>
    <string name="device_heater_off_btn">Off</string>
    <string name="device_timer_title">Timer</string>
    <string name="device_timer_set_btn">Timer set</string>
    <string name="device_siren_on_title">Siren</string>
    <string name="device_siren_on_btn">On</string>
    <string name="device_gate_title">Gate</string>
    <string name="device_gate_open_close_btn">Open/Close</string>
    <string name="device_cmd_456_btn">On</string>
    <string name="device_cmd_789_btn">Off</string>
    <string name="device_executionunit_title">Device executionunit</string>
    <string name="device_executionunit_on">On</string>
    <string name="device_executionunit_off">Off</string>
    <string name="state_common">Common</string>
    <string name="state_common_balance">Balance</string>
    <string name="state_common_info">Listen to information</string>
    <string name="state_common_info_sms">Get the sms</string>
    <string name="state_search_mode_title">Search mode</string>
    <string name="state_search_mode_on_btn">On</string>
    <string name="state_search_mode_off_btn">Off</string>
    <string name="state_location">Location</string>
    <string name="state_location_map">Map</string>
    <string name="state_location_coordinates">Coordinates</string>
    <string name="state_location_link_to_website">www.m.sobr.ru</string>
    <string name="state_report_move_btn">Report on the move</string>
    <string name="state_service_mode">Mode service</string>
    <string name="state_service_mode_on">On</string>
    <string name="state_service_mode_off">Off</string>
    <string name="state_infocall_dialog_posbtn">Call</string>
    <string name="state_infocall_dialog_msg">Call the system and listen to the information message.</string>
    <string name="state_infocall_dialog_msg_for_nobase_phone">After connecting with the system dial on
			keyboard</string>
    <string name="security_security">Arming</string>
    <string name="security_security_on">On</string>
    <string name="security_security_wo">On without the shock sensor</string>
    <string name="security_security_off">Off</string>
    <string name="security_mic">Microphone</string>
    <string name="security_mic_on">On</string>
    <string name="security_mic_dialog_message">After connecting to the system type on the keyboard</string>
    <string name="security_mic_dialog_message_end">007*</string>
    <string name="security_engine">Engine</string>
    <string name="security_engine_lock">Lock</string>
    <string name="security_engine_unlock">Unlock</string>
    <string name="security_doors">Doors</string>
    <string name="security_doors_open">Open</string>
    <string name="settings_profile">Profile</string>
    <string name="settings_profile_edit">Settings</string>
    <string name="settings_password">Password</string>
    <string name="settings_password_set">Set password</string>
    <string name="settings_password_hint">Password</string>
    <string name="profiles">Profiles</string>
    <string name="profiles_empty">Profiles empty</string>
    <string name="profiles_add">Add profiles</string>
    <string name="profile_new">New profile</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_phone_number">Telephone number system</string>
    <string name="profile_password">Password</string>
    <string name="profile_change_password">Change password</string>
    <string name="profile_unlock_code">Unlock code engine</string>
    <string name="profile_pin_code">PIN-code</string>
    <string name="profile_base_phone_number">Base phone number</string>
    <string name="profile_second_phone_number">Second phone number</string>
    <string name="profile_third_phone_number">Third phone number</string>
    <string name="profile_get_settings_info">Get settings info</string>
    <string name="profile_max_balance">Balance limit</string>
    <string name="profile_get_balance_code">Balance code</string>
    <string name="profile_program_car_pult">Program car pult</string>
    <string name="profile_program_keys">Program keys «Touch Memory»</string>
    <string name="profile_program_label_1">Program label №1</string>
    <string name="profile_program_label_2">Program label №2</string>
    <string name="profile_program_label_3">Program label №3</string>
    <string name="profile_name_hint">"For example, Mazda RX-3</string>
    <string name="profile_phone_number_hint">For example, +79991234567</string>
    <string name="profile_password_hint">Enter the 5 digits</string>
    <string name="profile_unlock_code_hint">Enter 3 digits</string>
    <string name="profile_pin_code_hint">Enter 4 digits</string>
    <string name="profile_pin_code_on_start_hint">PIN-code on start</string>
    <string name="profile_show_pass_hint">Show password</string>
    <string name="profile_base_phone_number_hint">+ХХХХХХХХХХХ</string>
    <string name="profile_second_phone_number_hint">+ХХХХХХХХХХХ</string>
    <string name="profile_third_phone_number_hint">+ХХХХХХХХХХХ</string>
    <string name="profile_max_balance_hint">Up to 10 characters</string>
    <string name="profile_get_balance_code_hint">For example, *100#</string>
    <string name="profile_program_keys_button">Program</string>
    <string name="profile_program_label_1_button">Program</string>
    <string name="profile_program_label_2_button">Program</string>
    <string name="profile_program_label_3_button">Program</string>
    <string name="profile_program_car_remote_button">Program</string>
    <string name="profile_user_settings_button">Individual settings</string>
    <string name="profile_get_settings_info_button">Get</string>
    <string name="profile_save">Save</string>
    <string name="profile_delete">Delete</string>
    <string name="profile_dialog_chenge_pass_warning_text">
Within 10 minutes of a password change, it is necessary to send the system a text message using the new password, for example your next adjustment or a request for information about other settings</string>
    <string name="profile_dialog_chenge_pass_warning_title">Warning!</string>
    <string name="profile_systemtype_title">System Type:</string>
    <string name="profile_user_confirm_btn">Ок</string>
    <string name="profile_user_by_default_btn">By default</string>
    <string name="profile_user_phone_status_title">User phone status</string>
    <string name="profile_user_command_123_title">Command 123:</string>
    <string name="profile_user_command_456_title">Command 456:</string>
    <string name="profile_user_command_789_title">Command 789:</string>
    <string name="profile_user_command_666_title">Command 666:</string>
    <string name="profile_user_command_777_title">Command 777:</string>
    <string name="profile_user_command_999_title">Command 999:</string>
    <string name="profile_user_command_09_title">Command 09:</string>
    <string name="profile_user_command_911_title">Command 911:</string>
    <string name="profile_user_gps_receiver_cbx">GPS-receiver</string>
    <string name="profile_user_report_on_the_move_cbx">Report on the move</string>
    <string name="profile_user_shock_sensor_cbx">Shock sensor</string>
    <string name="profile_user_presence_of_an_immobilizer_cbx">Immobilizer (SOBR-IP 01 или SOBR-GSM 130)</string>
    <string name="profile_user_custom_hint">Enter the name of the button</string>
    <string name="profile_user_custom_title_hint">Enter the name of the command</string>
    <string name="profile_user_enable_daily_mode_title">Mode "daily"</string>
    <string name="profile_user_enable_weekly_mode_title">Mode "weekly"</string>
    <string name="profile_user_enable_button">On</string>
    <string name="profile_user_communication_time_title">Communication time</string>
    <string name="profile_user_set_communication_time">Set</string>
    <string name="profile_pref_dialog_title_command_123">Command 123:</string>
	<string name="profile_pref_summary_command_123">Command 123:</string>
	<string name="profile_pref_title_command_123">Command 123:</string>
    <string name="profile_delete_message">Profile delete</string>
    <string name="profile_invalid">Profile invalid</string>
    <string name="profile_dialog_old_password">Old password</string>
    <string name="profile_dialog_new_password">New password</string>
    <string name="profile_dialog_new_password_confirm">New password confirm</string>
    <string name="profile_dialog_new_password_error">New password error</string>
    <string name="profile_dialog_old_pincode">Old PIN-code</string>
    <string name="profile_dialog_new_pincode">New PIN-code</string>
    <string name="profile_dialog_new_pincode_confirm">Confirm PIN-code</string>
    <string name="profile_dialog_new_pincode_error">New PIN-code error</string>
    <string name="profile_dialog_dailymode_message">Connects to the network and sends a text message once a day</string>
    <string name="profile_dialog_weeklymode_message">Connects to the network every 8 hours, sends a text message once a week</string>
	<string name="sec_by_move_title">Motion detection protection (Smart search)</string>
	<string name="sec_by_hour_title">Protection mode by time</string>
	<string name="sec_on_title">On</string>
	<string name="sec_off_title">Off</string>
	<string name="sec_set_time_title">Set time</string>
	<string name="sec_range_title">Interval</string>
	<string name="sec_by_move_on_prompt">The motion detection protection mode. The device will get connected and will send SMS if the protected object begins to move. If the movement continues, the device will continue to send SMS during the fixed time interval</string>
	<string name="sec_by_move_off_prompt">Turn off the motion detection protection mode, turn off the protection mode by time</string>
	<string name="sec_by_hour_prompt">The device can automatically turn on and off the motion detection protection mode at the set time</string>
	<string name="sec_set_time_prompt">Time of enabling and disabling the protection mode by time</string>
	<string name="sec_set_range_prompt">Motion sensor timeout - time interval after the end of an unscheduled session (motion detected), during which the continuing alarm of the sensor is ignored</string>
</resources>