<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding_16" >

        <TextView
            android:id="@+id/state_common_balance_title"
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/state_common"
            android:visibility="visible" />

        <Button
            android:id="@+id/state_common_balance_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_common_balance"
            android:visibility="visible" />

        <Button
            android:id="@+id/state_common_info_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_common_info"
            android:visibility="visible" />
        <Button
            android:id="@+id/state_common_info_sms_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_common_info_sms"
            android:visibility="visible" />

        <TextView
            android:id="@+id/state_location_map_title"
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_location"
            android:visibility="visible" />

        <Button
            android:id="@+id/state_location_map_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_location_map"
            android:visibility="visible" />

        <Button
                android:id="@+id/state_location_coordinates_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_2"
                android:text="@string/state_location_coordinates"
                android:visibility="visible" />

        <Button
                android:id="@+id/state_sobr_assist_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top_2"
                android:text="@string/state_sobr_assist"
                android:visibility="visible" />

        <Button
            android:id="@+id/state_report_move_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_report_move_btn"
            android:visibility="visible" />

        <TextView
            android:id="@+id/state_location_link_to_website"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="8dp"
            android:autoLink="web"
            android:text="@string/state_location_link_to_website"
            android:visibility="visible" />
        
        <TextView
            android:id="@+id/state_service_mode_title"
            style="@style/TextViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state_service_mode"
            android:visibility="visible" />

        <Button
            android:id="@+id/state_service_mode_on_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_service_mode_on"
            android:visibility="visible" />

        <Button
            android:id="@+id/state_service_mode_off_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_2"
            android:text="@string/state_service_mode_off"
            android:visibility="visible" />
    </LinearLayout>

</ScrollView>