<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:singleLine="true"
        android:text="@string/profile_dialog_old_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_2"
        android:hint="@string/profile_password_hint"
        android:inputType="number"
        android:maxLength="5"
        android:password="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginTop="@dimen/margin_top_1"
        android:singleLine="true"
        android:text="@string/profile_dialog_new_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/dialog_new_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_2"
        android:hint="@string/profile_password_hint"
        android:inputType="number"
        android:maxLength="5"
        android:password="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/dialog_new_password_confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_2"
        android:hint="@string/profile_dialog_new_password_confirm"
        android:inputType="number"
        android:maxLength="5"
        android:password="true"
        android:singleLine="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>